tests/render_snapshots/snapshots/render_snapshots__result_history__focus_mode_history_mode.snap
---
source: tests/render_snapshots/result_history.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [3] Result Query (1 row, 5ms) ───────────────────────────────────────────────┐
│count                                                                         │
│42                                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│◀ 1/3 ▶                                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
]/[:History  ?:Help  ^H:Back
