tests/render_snapshots/snapshots/render_snapshots__result_history__history_mode_with_horizontal_scroll.snap
---
source: tests/render_snapshots/result_history.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [3] Result Query (1 row, 12ms) ──────────────────────────────────────────────┐
│column_1   column_2   column_3   column_4   column_5   column_6   column_7    │
│value_1    value_2    value_3    value_4    value_5    value_6    value_7     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│◀ 3/3 ▶ col   0% ◀︎═════════════════════════════════════════════════════════──▶︎│
└──────────────────────────────────────────────────────────────────────────────┘
]/[:History  ?:Help  ^H:Back
