tests/render_snapshots/snapshots/render_snapshots__result_history__result_pane_history_mode.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││(select a table)                                          │
│  public.comments ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  │└──────────────────────────────────────────────────────────┘
│                  │┌ [3] Result Query (1 row, 5ms) ───────────────────────────┐
│                  ││count                                                     │
│                  ││42                                                        │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││◀ 2/3 ▶                                                   │
└──────────────────┘└──────────────────────────────────────────────────────────┘
]/[:History  ?:Help  ^H:Back
